Initial 1.20.6 update